# open-xiaoai

./: .dockerignore  .gitignore
docs/: lx06-firmware-hijack.md  xiaozhi-vs-migpt.md
examples/assistant/: .env.example  PROTOCOL.md  README.md  config.ts  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json
examples/assistant/assistant/: env.ts  index.ts  server.ts
examples/assistant/data/: .gitignore  soul.md
examples/assistant/docs/: memory.md  todo.md
examples/assistant/scripts/: dev.mjs
examples/assistant/src/: config.ts  index.ts  (+4 more)
examples/migpt/: .env.example  ARCHITECTURE.md  Cargo.toml  Dockerfile  PROTOCOL.md  README.md  config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
examples/migpt/migpt/: env.ts  push.ts  speaker.ts  tts.ts  xiaoai.ts
examples/migpt/rust/: lib.rs  node.rs  runtime.rs  server.rs
examples/migpt/src/: agent.ts  config.ts  env.ts  index.ts  open-xiaoai.ts  speaker.ts  xiaoai.ts
examples/xiaozhi/: .env.example  README.md  config.py  pyproject.toml
examples/xiaozhi/xiaozhi/: event.py  pipeline.py  xiaoai.py  xiaozhi.py
examples/xiaozhi/xiaozhi/models/: .gitignore  keywords.txt
examples/xiaozhi/xiaozhi/services/: push.py  speaker.py
examples/xiaozhi/xiaozhi/services/asr/: __init__.py  mimo.py
examples/xiaozhi/xiaozhi/services/audio/: stream.py
examples/xiaozhi/xiaozhi/services/audio/kws/: __init__.py  sherpa.py
examples/xiaozhi/xiaozhi/services/audio/vad/: __init__.py
examples/xiaozhi/xiaozhi/services/tts/: __init__.py  mimo.py
examples/xiaozhi/xiaozhi/utils/: audio.py  base.py
(+91 files in other folders)
