[package]
name = "open_xiaoai_server"
version = "0.1.0"
edition = "2021"
exclude = ["index.node"]

[lib]
path = "rust/lib.rs"
crate-type = ["cdylib"]


[dependencies]
neon = { version = "1.1.0-alpha.1", features = ["napi-6", "futures", "tokio"] }
open-xiaoai = { path = "../../packages/client-rust" }
tokio = { version = "1.32.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.21.3"
